# RUST_Tuner

./: .gitignore  Cargo.toml  README.md
juce_app/: CMakeLists.txt
juce_app/Source/: Main.cpp  TunerComponent.cpp  TunerComponent.h
rust_logic/: Cargo.toml
rust_logic/src/: lib.rs
src/: gui.rs  main.rs  note.rs
